--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.ts",
   "scripts": {
     "start": "nodemon --exec 'node --inspect=0.0.0.0:9229 --require ts-node/register src/index.ts'",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest",
+    "test:watch": "jest --watchAll",
     "prettier-format": "prettier --config .prettierrc ./src/*.ts ./src/**/*.ts --write",
     "dev:docker": "docker-compose up --build",
     "build": "npm run prettier-format && tsc --build"
@@ -19,11 +20,22 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.23.2",
+    "@prisma/client": "^5.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/jest": "^29.5.6",
+    "@types/node": "^20.6.0",
     "@types/nodemon": "^1.19.2",
+    "@types/supertest": "^2.0.15",
     "dotenv": "^16.3.1",
+    "jest": "^29.7.0",
+    "jest-mock-extended": "^3.0.5",
+    "jest-watch-typeahead": "^2.2.2",
     "prettier": "^2.8.4",
+    "prisma": "^5.4.2",
+    "supertest": "^6.3.3",
+    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0"
   }
