--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "This will be a chat project",
   "main": "index.ts",
   "scripts": {
-    "start": "nodemon --exec 'node --inspect=0.0.0.0:9229 --require ts-node/register src/index.ts'",
+    "start": "npx prisma migrate dev --name initialize && nodemon --exec 'node --inspect=0.0.0.0:9229 --require ts-node/register src/index.ts'",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "prettier-format": "prettier --config .prettierrc ./src/*.ts ./src/**/*.ts --write",
@@ -16,6 +16,7 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.20",
     "typescript": "^4.9.5"
   },
