--- a/package.json
+++ b/package.json
@@ -14,14 +14,14 @@
   "author": "Bruno Enrique",
   "license": "MIT",
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.20",
-    "typescript": "^4.9.5"
+    "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@babel/preset-typescript": "^7.23.2",
     "@prisma/client": "^5.4.2",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
@@ -38,6 +38,7 @@
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
-    "tsconfig-paths": "^4.2.0"
+    "tsconfig-paths": "^4.2.0",
+    "typescript": "^5.2.2"
   }
 }
