--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,16 +6,19 @@
     "outDir": "./build" /* Specify an output folder for all emitted files. */,
     "forceConsistentCasingInFileNames": true /* Ensure that casing is correct in imports. */,
     "strict": true /* Enable all strict type-checking options. */,
-    "skipLibCheck": true /* Skip type checking all .d.ts files. */,
     "esModuleInterop": true,
-    "types": ["node", "jest"],
+    "declaration": true,
+    "moduleResolution": "node",
+    "strictNullChecks": true,
+    "skipLibCheck": true,
     "paths": {
-      "@/*": ["./src/*"]
-    },
-    "strictNullChecks": true
+      "@src/*": ["./src/*"]
+    }
   },
-  "compileOnSave": true,
+
   "ts-node": {
     "require": ["tsconfig-paths/register"]
-  }
+  },
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "src/**/*.spec.ts"]
 }
