--- a/tsconfig.json
+++ b/tsconfig.json
@@ -12,7 +12,9 @@
     "strictNullChecks": true,
     "skipLibCheck": true,
     "paths": {
-      "@src/*": ["./src/*"]
+      "@src/*": ["./src/*"],
+      "@routes/*": ["./src/routes/*"],
+      "@schemas/*": ["./src/schemas/*"]
     }
   },
 
