add signin and sigup routes

--- a/.example.env
+++ b/.example.env
@@ -4,4 +4,5 @@ DB_PASSWORD = PASSWORD_OF_DATABASE
 DB_HOST = HOST OF DATABASE
 
 DATABASE_URL = URL STRING FOR CONNECT TO DATABASE OUTSIDE DOCKER 
-MIGRATION_DATABASE_URL = URL STRING TO RUN MIGRATIONSj
+MIGRATION_DATABASE_URL = URL STRING TO RUN MIGRATIONS
+SECRET = JWT SECRET
