--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "author": "Bruno Enrique",
   "license": "MIT",
   "dependencies": {
+    "@types/jsonwebtoken": "^9.0.4",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^2.0.20",
     "zod": "^3.22.4"
   },
   "devDependencies": {
     "@prisma/client": "^5.4.2",
+    "@types/bcrypt": "^5.0.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/node": "^20.6.0",
