--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,7 @@
     "moduleResolution": "node",
     "strictNullChecks": true,
     "skipLibCheck": true,
+    "typeRoots": ["./src/@types"],
     "paths": {
       "@src/*": ["./src/*"],
       "@routes/*": ["./src/routes/*"],
@@ -21,6 +22,6 @@
   "ts-node": {
     "require": ["tsconfig-paths/register"]
   },
-  "include": ["src/**/*"],
+  "include": ["src/**/*", "./node_modules/@types"],
   "exclude": ["node_modules", "src/**/*.spec.ts"]
 }
