--- a/package.json
+++ b/package.json
@@ -13,11 +13,13 @@
   "license": "MIT",
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.4",
+    "@types/nodemailer": "^6.4.13",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^6.9.7",
     "nodemon": "^2.0.20",
     "zod": "^3.22.4"
   },
