add email sender envs

--- a/.example.env
+++ b/.example.env
@@ -6,3 +6,10 @@ DB_HOST = HOST OF DATABASE
 DATABASE_URL = URL STRING FOR CONNECT TO DATABASE OUTSIDE DOCKER 
 MIGRATION_DATABASE_URL = URL STRING TO RUN MIGRATIONS
 SECRET = JWT SECRET
+
+EMAIL_SERVICE = EMAIL SERVICE, IT COULD BE "gmail"
+EMAIL_HOST = EMAIL HOST, IT COULD BE "smtp.gmail.com"
+EMAIL_SECURE = IF EMAIL IS SECURE
+EMAIL_AUTH_USER = EMAIL USER
+EMAIL_AUTH_PASS = EMAIL PASSWORD
+EMAIL_FROM = EMAIL FROM
