add exercises repository, service and controller

--- a/.example.env
+++ b/.example.env
@@ -13,3 +13,13 @@ EMAIL_SECURE = IF EMAIL IS SECURE
 EMAIL_AUTH_USER = EMAIL USER
 EMAIL_AUTH_PASS = EMAIL PASSWORD
 EMAIL_FROM = EMAIL FROM
+
+
+AWS_ACCESS_KEY_ID= 
+AWS_SECRET_ACCESS_KEY=
+AWS_REGION=
+
+BUCKETNAME=
+S3BASEURL=
+CLOUDFRONTURL=
+
