--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
   "dependencies": {
     "@types/jsonwebtoken": "^9.0.4",
     "@types/nodemailer": "^6.4.13",
+    "aws-sdk": "^2.1499.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^2.0.20",
     "zod": "^3.22.4"
@@ -28,6 +30,7 @@
     "@types/bcrypt": "^5.0.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/multer": "^1.4.10",
     "@types/node": "^20.6.0",
     "@types/nodemon": "^1.19.2",
     "@types/supertest": "^2.0.15",
