--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npx prisma migrate dev --name initialize && nodemon --exec 'node --inspect=0.0.0.0:9229 --require ts-node/register src/index.ts'",
     "prettier-format": "prettier --config .prettierrc ./src/*.ts ./src/**/*.ts --write",
     "dev:docker": "docker-compose up --build",
-    "build": "npm run prettier-format && tsc --build"
+    "build": "npm run prettier-format && tsc --build",
+    "test": "vitest"
   },
   "author": "Bruno Enrique",
   "license": "MIT",
@@ -23,6 +24,8 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^2.0.20",
+    "vitest": "^1.2.2",
+    "vitest-tsconfig-paths": "^3.4.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -35,12 +38,10 @@
     "@types/nodemon": "^1.19.2",
     "@types/supertest": "^2.0.15",
     "dotenv": "^16.3.1",
-    "jest-mock-extended": "^3.0.5",
     "jest-watch-typeahead": "^2.2.2",
     "prettier": "^2.8.4",
     "prisma": "^5.4.2",
     "supertest": "^6.3.3",
-    "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2"
