--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prettier-format": "prettier --config .prettierrc ./src/*.ts ./src/**/*.ts --write",
     "dev:docker": "docker-compose up --build",
     "build": "npm run prettier-format && tsc --build",
-    "test": "vitest"
+    "test": "vitest --config ./vitest.config.ts"
   },
   "author": "Bruno Enrique",
   "license": "MIT",
@@ -44,6 +44,7 @@
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "vitest-mock-extended": "^1.3.1"
   }
 }
