--- a/tsconfig.json
+++ b/tsconfig.json
@@ -23,5 +23,5 @@
     "require": ["tsconfig-paths/register"]
   },
   "include": ["src/**/*", "./node_modules/@types"],
-  "exclude": ["node_modules", "src/**/*.spec.ts"]
+  "exclude": ["node_modules"]
 }
