--- a/package.json
+++ b/package.json
@@ -21,9 +21,6 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
-    "nodemon": "^2.0.20",
-    "vitest": "^1.2.2",
-    "vitest-tsconfig-paths": "^3.4.1",
     "zod": "^3.22.4"
   },
   "devDependencies": {
@@ -38,13 +35,15 @@
     "@types/nodemon": "^1.19.2",
     "@types/supertest": "^2.0.15",
     "dotenv": "^16.3.1",
-    "jest-watch-typeahead": "^2.2.2",
+    "nodemon": "^3.0.3",
     "prettier": "^2.8.4",
     "prisma": "^5.4.2",
     "supertest": "^6.3.3",
     "ts-node": "^10.9.1",
     "tsconfig-paths": "^4.2.0",
     "typescript": "^5.2.2",
-    "vitest-mock-extended": "^1.3.1"
+    "vitest": "^1.3.1",
+    "vitest-mock-extended": "^1.3.1",
+    "vitest-tsconfig-paths": "^3.4.1"
   }
 }
