feature: add seed file

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,7 +16,8 @@
       "@src/*": ["./src/*"],
       "@routes/*": ["./src/routes/*"],
       "@schemas/*": ["./src/schemas/*"]
-    }
+    },
+    "types": ["node"]
   },
 
   "ts-node": {
