--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npx prisma db push && nodemon --exec 'node --inspect=0.0.0.0:9229 --require ts-node/register src/index.ts'",
     "prettier-format": "prettier --config .prettierrc ./src/*.ts ./src/**/*.ts --write",
     "dev:docker": "docker-compose up --build",
+    "seed:test": "npx prisma migrate reset -f && NODE_ENV=test npx ts-node prisma/seed.ts",
     "build": "npm run prettier-format && tsc --build"
   },
   "author": "Bruno Enrique",
@@ -31,7 +32,7 @@
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
     "@types/multer": "^1.4.10",
-    "@types/node": "^20.6.0",
+    "@types/node": "^20.12.5",
     "@types/nodemon": "^1.19.2",
     "@types/supertest": "^2.0.15",
     "dotenv": "^16.3.1",
