--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prettier-format": "npx prettier --config .prettierrc ./src/*.ts ./src/**/*.ts --write",
     "dev:docker": "docker-compose up --build",
     "seed:test": "npx prisma migrate reset -f && NODE_ENV=test npx ts-node --project tsconfig-dev.json prisma/seed.ts",
-    "build": "npm run prettier-format && tsc --build"
+    "build": "tsc --build && npx tscpaths -p tsconfig.json -s ./src -o ./build"
   },
   "author": "Bruno Enrique",
   "license": "MIT",
@@ -24,6 +24,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^2.0.20",
+    "tscpaths": "^0.0.9",
     "zod": "^3.22.4"
   },
   "devDependencies": {
