--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^9.0.2",
+    "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.7",
     "nodemon": "^2.0.20",
@@ -28,10 +29,11 @@
     "zod": "^3.22.4"
   },
   "devDependencies": {
-    "@prisma/client": "^5.11.0",
+    "@prisma/client": "5.12.1",
     "@types/bcrypt": "^5.0.1",
     "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.10",
     "@types/node": "^20.12.5",
     "@types/nodemon": "^1.19.2",
@@ -40,7 +42,7 @@
     "jest-mock-extended": "^3.0.5",
     "jest-watch-typeahead": "^2.2.2",
     "prettier": "^2.8.4",
-    "prisma": "^5.4.2",
+    "prisma": "5.12.1",
     "supertest": "^6.3.3",
     "ts-jest": "^29.1.1",
     "ts-node": "^10.9.1",
